--- a/style/main.css
+++ b/style/main.css
@@ -9,19 +9,25 @@
     box-sizing: border-box;
 }
 
+/*elementos base*/
+
 body{
     
     background:var(--preta);
     font-family: 'Times New Roman', Times, serif;
+    color: white
 }
 
 header .container{
     display:flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 
 }
 
 header .logo{
+    margin-left: 5px;
     color:var(--vermelho);
     font-family:"Arial black", times ;
     font-size:40px;
@@ -35,4 +41,22 @@ header nav a{
 
 header nav a:hover{
     color: #fff;
+}
+/* filme principal*/
+
+.filme-principal{
+font-size:16px;
+background:linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url("../img/capa-rambo.jpg");
+
+height: 400px;
+background-size: cover;
+
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+}
+
+.filme-principal .descricao{
+    margin-bottom: 40px;
 }
