--- a/style/main.css
+++ b/style/main.css
@@ -86,3 +86,9 @@ align-items: flex-start;
 .botao i{
     margin-right: 8px;
 }
+.container{
+    margin-left: 20px;
+}
+.filme-principal.container{
+    width: 70%;
+}
