--- a/style/main.css
+++ b/style/main.css
@@ -92,3 +92,8 @@ align-items: flex-start;
 .filme-principal.container{
     width: 70%;
 }
+.box-filme{
+    height: 100%;
+    width: 100%;
+    display: block ;
+}
